fix overflow contacts

--- a/src/components/Contacts/Contacts.css
+++ b/src/components/Contacts/Contacts.css
@@ -4,7 +4,12 @@
     padding: 1.25rem;
     background-color: #34495e;
     box-shadow: 0 1px 15px 1px rgba(69, 65, 78, 0.1);
-    position: fixed;
+    overflow: hidden;
+    position: absolute;
     top: 0;
     left: 0;
+}
+
+.contacts:hover {
+    overflow-y: auto;
 }
