--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    height: 4.25rem;
+    height: 4.35rem;
     background-color: #ffffff;
     box-shadow: 0 1px 15px 1px rgba(69, 65, 78, 0.1);
     padding-left: 400px;
